v1.6 Updated FinnScraper.java
- Updated the FinnScraper.java to match their updated site
- Updated FinnScraperTest.java to match new changes